Enabling scrollbar for the part of the evenly-divided-horizontal-parts that's fixed

--- a/lizard_ui/media/lizard_ui/lizard.css
+++ b/lizard_ui/media/lizard_ui/lizard.css
@@ -176,6 +176,10 @@ body
   background-color: white;
   width: 100%;
   }
+#content .not-evenly-spaced
+{ overflow: auto;
+  }
+
 /* Footer content centered and with non-obtrusive links. */
 #footer
 { text-align: center;
